# project-elfenroads

./: .gitignore  README.md
Unity/ElvenRoads/: mono_crash.1f20eaa7d4.0.json  mono_crash.9adc8497e.0.json  mono_crash.9adc8497e.1.json  mono_crash.9adc8497e.2.json
Unity/ElvenRoads/Assets/: .gitignore
Unity/ElvenRoads/Assets/Input Action/: Controls.inputactions
Unity/ElvenRoads/Assets/Prefabs/: ElfenGoldBook.prefab  ElfenLandBook.prefab  ElfenRoadsGame.prefab  Player.prefab  WorldGeometry.prefab
Unity/ElvenRoads/Assets/Scenes/: HelpGuide.unity  TableTop.unity  Title Screen.unity
Unity/ElvenRoads/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Unity/New Unity Project/Assets/GameState/: Card.cs
elfencore/src/: elfencore.sln
elfencore/src/Elfencore.Console/: Elfencore.Console.csproj  LaunchArguments.cs  Program.cs
elfencore/src/Elfencore.Demo/: Elfencore.Demo.csproj  Elfencore.Demo.sln
elfencore/src/Elfencore.Network/: Connector.cs  Elfencore.Network.csproj  EncapsulatedMessage.cs
elfencore/src/Elfencore.Session/: Elfencore.Session.csproj  Session.cs  Verification.cs
elfenserver/: .gitignore  Cargo.toml  README.md  demo_config.toml
elfenserver/src/: config.rs  consts.rs  imports.rs  init.rs  main.rs  store.rs
elfenserver/src/auth/: access.rs  table.rs  user.rs
elfenserver/src/fabric/: handlers.rs  msg.rs  query.rs  service.rs
elfenserver/src/lobby/: client.rs  handlers.rs  records.rs  service.rs
elfenserver/src/session/: core.rs  id.rs  msg.rs  records.rs
elfenserver/src/ws/: builder.rs  conn.rs  internal.rs  public.rs
(+112 files in other folders)
